src/infra/k8s/mm-api/mm-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-maker-api
  labels:
    app: menu-maker-api
  namespace: menu-maker-dev
spec:
  selector:
    matchLabels:
      app: menu-maker-api
  template:
    metadata:
      labels:
        app: menu-maker-api
    spec:
      containers:
      - name: menu-maker-api
        image: 10.0.1.1:32000/menu-maker-api:latest
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: menu-maker-api-service
  namespace: menu-maker-dev
spec:
  type: ClusterIP
  selector:
    app: menu-maker-api
  ports:
    - name: api-http
      protocol: TCP
      port: 8090
      targetPort: 8080
    - name: api-https
      protocol: TCP
      port: 8091
      targetPort: 443
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: menu-maker-api-ingress
  namespace: menu-maker-dev
spec:
  ingressClassName: nginx
  rules:
    - host: menu-maker.nikoddev.dk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: menu-maker-api-service
                port:
                  number: 8090
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: menu-maker-api-service
                port:
                  number: 8090
